tests/errors/flexIntLocked.milo
// @error: type mismatch: 'a' declared as i32 but got i64
// An unannotated int binding defaults to i64 and never silently narrows: `let m = 5`
// is i64, so assigning it into an i32 var is rejected (i64 -> i32 is lossy).
fn main(): i32 {
    let m = 5
    let a: i32 = m
    return 0
}
